# dxfeed-graal-api-native

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: github-ci.yml
cmake/: CompileOptions.cmake  Custom.cmake
src/apps/: CMakeLists.txt
src/apps/hello_from_foo/: CMakeLists.txt  main.cpp
src/apps/hello_world/: CMakeLists.txt
src/libs/foo/: CMakeLists.txt
src/libs/foo/include/Foo/: Foo.hpp
src/libs/foo/src/: Foo.cpp
tests/: CMakeLists.txt
tests/test_native/: CMakeLists.txt  main.cpp
